<resources>
    <string name="app_name">ACPMobile</string>
    <string name="splash_welcome">Welcome to ACP Mobile</string>
    <string name="splash_first_text">This is your first time exploring ACP Mobile app.\nPress ‘Get Started’ button to explore the benefits.</string>
    <string name="splash_button">Get Started </string>
    <string name="welcome_first_title">Affordable Conectivity Program</string>
    <string name="welcome_first_text">The Affordable Connectivity Program is an FCC benefit program that helps ensure that households can afford the broadband they need for work, school, healthcare and more.\n\nThe benefit provides a discount of up to $30 per month toward internet service for eligible households and up to $75 per month for households on qualifying Tribal lands. Eligible households can also receive a one-time discount of up to $100 to purchase a laptop, desktop computer, or tablet from participating providers if they contribute more than $10 and less than $50 toward the purchase price.\n\nThe Affordable Connectivity Program is limited to one monthly service discount and one device discount per household.\n\nBefore continuing you are required to review our <u>Terms of Use</u> and <u>Privacy Policy</u>.</string>
    <string name="welcome_first_button">Continue</string>
    <string name="welcome_second_title_first"> Terms of Use</string>
    <string name="welcome_second_text_first">At ACP, accessible from acpmobile.com, one of our
main priorities is the privacy of our visitors. This
Privacy Policy document contains types of
information that is collected and recorded by ACP
and how we use it.</string>
    <string name="welcome_second_title_second2">If you have additional questions or require more
information about our Privacy Policy, do not hesitate to contact us.</string>
    <string name="welcome_second_title_second"> Privacy Policy</string>
    <string name="welcome_second_title_second3">This Privacy Policy applies only to our online activities and is valid for visitors to our website woth
regards to the information that they shared and/or
collect in ACP. This policy is not applicable to any
information collected offline or via channels other
than this website. Our Privacy Policy was created
with the help of the Free Privacy Policy Generator.</string>
    <string name="welcome_second_text_second"> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="welcome_second_button">Accept</string>
    <string name="label_read_our">Read our</string>
    <string name="label_terms_of_use">\u0020Terms of Use</string>
    <string name="label_and">\u0020and</string>
    <string name="label_privacy_and_policy">\u0020Privacy and Policy.</string>
    <string name="title_check_eligibility_or_create_new_account">Check eligibility or create new account</string>
    <string name="label_acp_requires_proof">ACP requires proof of your identity to check if you are eligible for any of the <font color="#007AFF">assistance programs</font> approved by FCC. If you are already receiving government benefits, check your eligibility status by clicking the button below. Otherwise, create a new account and follow the required steps to verify your identity.*</string>
    <string name="btn_check_eligibility">Check Eligibility</string>
    <string name="btn_new_account">New Account</string>
    <string name="label_check_eligbility_or_new_account_description">*All of your personal and identity information goes through National Verifier (NV), a body of FCC. No information is stored by us or third-party services.</string>
    <string name="label_start_by_entering_your_zip_code">Start by entering your ZIP code</string>
    <string name="label_after_entering_zip_code_you_will_be_required_to_enter">After entering ZIP code you will be required to enter your personal information in order to verify identitiy.</string>
    <string name="label_your_zip_code">Your ZIP Code</string>
    <string name="label_zip_code">ZIP Code</string>
    <string name="label_your_full_legal_name">Your full legal name</string>
    <string name="label_the_name_you_use_on_official_document">The name you use on official documents, like your Social Security Card or State ID. Not a nickname.</string>
    <string name="label_first_name">First Name*</string>
    <string name="label_middle_name">Middle Name <font color="#8E8E93">(Optional)</font></string>
    <string name="label_last_name">Last Name*</string>
    <string name="label_Cannot_be_left_blank">*Cannot be left blank</string>
    <string name="btn_next">Next</string>
    <string name="label_name">Name</string>
    <string name="label_date_birth">Date of Birth</string>
    <string name="label_address">Address</string>
    <string name="label_your_date_of_birth">Your date of birth</string>
    <string name="label_this_information_is_required_by_national">This information is required by National Verifier to verify your identity.</string>
    <string name="label_month">Month*</string>
    <string name="label_day">Day*</string>
    <string name="label_year">Year*</string>
    <string name="label_SSN_last_4_digits">SSN (Last 4 digits of your Social Security Number)*</string>
    <string name="btn_try_again">Try Again</string>
    <string name="title_identity_verification_failed">We could not verify your identity.</string>
    <string name="subtitle_identity_verification_failed">You either entered wrong information or there is no such data in  <font color="#007AFF">National Verifier</font> system.</string>
    <string name="verifying">Verifying...</string>
    <string name="checking_informations_description">We are back-checking your information through National Verifier. It may take a few minutes.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="identity_verified_description">Success! Your identity has been verified and you are eligible for ACP. You can continue by registering a new ACP Mobile account.</string>
    <string name="btn_register">Register</string>
    <string name="welcome_john">Welcome, John!</string>
    <string name="label_your_home_address">Your home address</string>
    <string name="label_the_address_where_you_will">The address where you will get service.\nDo not use a P.O. Box.</string>
    <string name="label_street_number_and_name">Street Number and Name*</string>
    <string name="label_city">City*</string>
    <string name="label_state">State*</string>
    <string name="btn_verify">Verify</string>
    <string name="label_register_new_account">Register new account</string>
    <string name="label_register_new_account_by_entering_your">Hi John! Register a new account by entering your email address and password below.</string>
    <string name="label_email"> Email Address</string>
    <string name="label_password"> Password</string>
    <string name="label_confirm_password"> Confirm Password</string>
    <string name="label_confirm_your_email">Confirm your email</string>
    <string name="label_we_ve_sent_numerical_confirmation_code_to_your_email">We’ve sent numerical confirmation code to your email. Please enter it below to verify it’s you and continue to the next step.</string>
    <string name="label_didn_t_receive_your_code">Didn’t receive your code?</string>
    <string name="label_resend">Resend.</string>
    <string name="btn_confirm">Confirm</string>
    <string name="label_personal_info">Personal info</string>
    <string name="label_identity_proof">Identity Proof</string>
    <string name="label_bank_info">Bank info</string>
    <string name="label_create_new_account">Create new account</string>
    <string name="label_follow_the_registration_and_verification_process">Follow the registration and verification process to see if you\'re eligible for ACP services.\n\nAfter completing the process, you will be awarded $10 to your digital wallet to spend with one of our <font color="#007AFF">partners.</font></string>
    <string name="btn_get_started">Get Started</string>
    <string name="label_enter_personal_information_below">Enter personal information below that will be associated with your account.</string>
    <string name="label_first_name_only">First Name</string>
    <string name="label_last_name_only">Last Name</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_SSN">SSN (Social Security Number)</string>
    <string name="label_KYC_verification">KYC verification</string>
    <string name="label_you_are_required_to_go">You are required to go through <font color="#007AFF">KYC (Know Your Customer)</font> process to continue.\nKYC requires a selfie/clear shot of your face and a photo of the document that confirms your identity (ID, passport, resident card, driver’s license).</string>
    <string name="btn_start_verification">Start Verification</string>
    <string name="toolbar_back">Back</string>
    <string name="toolbar_welcome">Welcome</string>
    <string name="label_registration_complete">Registration complete!</string>
    <string name="label_you_done_your_part">You’ve done your part. Now it’s time for us to back-check your information and approve registration.\nThis process may take 2-3 business days.</string>
    <string name="label_login"><u>Login</u></string>
    <string name="label_enter_bank_account_information">Enter bank account information that we will use to transfer funds.</string>
    <string name="label_bank_name">Bank Name</string>
    <string name="label_bank_number">Bank Number</string>
    <string name="label_account_holder_name">Account Holder Name</string>
    <string name="label_account_number">Account Number</string>
    <string name="label_expiration_date">Expiration Date</string>
    <string name="btn_complete">Complete</string>
    <string name="label_verification_complete">Verification complete!</string>
    <string name="btn_done">Done</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mywallet_total_balance">Total balance</string>
    <string name="btn_new_card">New Card</string>
    <string name="label_all">All</string>
    <string name="label_incoming">Incoming</string>
    <string name="label_outgoing">Outgoing</string>
    <string name="details">Details</string>
    <string name="label_confirmed">Confirmed!</string>
    <string name="label_city_only">City</string>
    <string name="label_state_only">State</string>
    <string name="label_street_number_and_name_only">Street Number and Name</string>
    <string name="label_request_debit_card">Request a debit card</string>
    <string name="label_acp_mobile_visa_debit_card">ACP Mobile VISA debit card will be sent to the address registered to your account. Please review this information before submitting the request.</string>
    <string name="btn_request_card">Request Card</string>
    <string name="btn_edit">Edit</string>
</resources>