<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".ui.fragments.welcomeFragments.WelcomeFragmentSecond">


    <TextView
        android:id="@+id/tvReadOur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/label_read_our" />

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_terms_of_use"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/tvAnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_and"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_privacy_and_policy"
        android:textColor="@color/colorPrimary" />

</LinearLayout>