<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_element_10"
    android:backgroundTint="@color/grayLight"
    android:orientation="horizontal"
    android:padding="6dp">

    <TextView
        android:id="@+id/tvPersonalInfo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/label_personal_info"
        android:textAlignment="center"
        android:textColor="@color/grayBtn" />

    <TextView
        android:id="@+id/tvIdentityProof"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/label_identity_proof"
        android:textAlignment="center"
        android:textColor="@color/grayBtn" />

    <TextView
        android:id="@+id/tvBankInfo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/label_bank_info"
        android:textAlignment="center"
        android:textColor="@color/grayBtn" />

</LinearLayout>