<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_background">

    <TextView
        android:id="@+id/tvSplashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_welcome"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSplashSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/splash_first_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSplashTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/splash_button"
        app:cornerRadius="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:padding="14dp"
        android:layout_marginBottom="80dp"
        app:icon="@drawable/arrow_btn"
        app:iconGravity="textEnd"
        app:iconSize="16dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>