<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".ui.fragments.welcomeFragments.WelcomeFragmentSecond">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/start_end_margin"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/svWelcomeSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="6dp"
            android:layout_weight="45"
            android:background="@drawable/round_element_20"
            android:backgroundTint="@color/grayLight" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7" />

        <View
            android:layout_width="0dp"
            android:layout_height="6dp"
            android:layout_weight="45"
            android:background="@drawable/round_element_20"
            android:backgroundTint="@color/colorPrimary" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/svWelcomeSecond"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/start_end_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWelcomeSecondTitle"
                style="@style/TitleTextBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_second_title_first" />

            <TextView
                android:id="@+id/tvWelcomeSecondText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_between_tittle_and_subtitle"
                android:lineSpacingExtra="10sp"
                android:lineSpacingMultiplier="0.8"
                android:text="@string/welcome_second_text_first" />

            <TextView
                android:id="@+id/tvWelcomeSecondTitle2"
                style="@style/TitleTextBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/welcome_second_title_second" />

            <TextView
                android:id="@+id/tvWelcomeSecondText2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_between_tittle_and_subtitle"
                android:lineSpacingExtra="10sp"
                android:lineSpacingMultiplier="0.8"
                android:text="@string/welcome_second_text_second" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWelcomeSecondAccept"
                style="@style/ButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_btn_and_text_medium"
                android:layout_marginBottom="@dimen/extra_large_margin"
                android:text="@string/welcome_second_button"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>