<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Wallet.RequestDebitCardFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TitleTextBlue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginTop="@dimen/top_margin_medium"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:text="@string/label_request_debit_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_tittle_and_subtitle"
                android:lineSpacingExtra="10sp"
                android:lineSpacingMultiplier="0.8"
                android:text="@string/label_acp_mobile_visa_debit_card"
                app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/label_first_name_only"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

            <TextView
                android:id="@+id/etFirstName"
                style="@style/TextViewDisable"
                android:text="Jhon"
                android:textColor="@color/grayDark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/etLastName"
                app:layout_constraintStart_toStartOf="@+id/tvSubtitle"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstName"/>


            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/label_last_name_only"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/etLastName"
                app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

            <TextView
                android:id="@+id/etLastName"
                style="@style/TextViewDisable"
                android:textColor="@color/grayDark"
                android:text="Doe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintEnd_toEndOf="@+id/tvSubtitle"
                app:layout_constraintStart_toEndOf="@id/etFirstName"
                app:layout_constraintTop_toBottomOf="@+id/tvLastName"/>

            <TextView
                android:id="@+id/tvStreetNumberAndName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/label_street_number_and_name_only"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

            <TextView
                android:id="@+id/etStreetNumberAndName"
                style="@style/TextViewDisable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="1902 Pennsylvania Ave"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvStreetNumberAndName">
            </TextView>

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/label_city_only"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/etStreetNumberAndName" />

            <TextView
                android:id="@+id/etCity"
                style="@style/TextViewDisable"
                android:text="Austin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvCity"/>

            <TextView
                android:id="@+id/tvState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/label_state_only"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/etCity" />

            <TextView
                android:id="@+id/etState"
                style="@style/TextViewDisable"
                android:text="TX"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintEnd_toStartOf="@+id/etZipCode"
                app:layout_constraintStart_toStartOf="@+id/etCity"
                app:layout_constraintTop_toBottomOf="@+id/tvState"/>
            <TextView
                android:id="@+id/tvZipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/label_zip_code"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/etZipCode"
                app:layout_constraintTop_toBottomOf="@+id/etCity" />

            <TextView
                android:id="@+id/etZipCode"
                style="@style/TextViewDisable"
                android:text="92805 - 1483"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintEnd_toEndOf="@+id/etStreetNumberAndName"
                app:layout_constraintStart_toEndOf="@+id/etState"
                app:layout_constraintTop_toBottomOf="@+id/tvState"/>

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/label_phone_number"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/etState" />

            <TextView
                android:id="@+id/etPhoneNumber"
                style="@style/TextViewDisable"
                android:text="+1 3456 5445"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEdit"
                style="@style/ButtonWhiteWithBlueStroke"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                app:icon="@drawable/ic_edit_button"
                app:iconTint="@color/colorPrimary"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toTopOf="@id/btnRequestCard"
                app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
                app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRequestCard"
                style="@style/ButtonBlue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/extra_large_margin"
                android:text="@string/btn_request_card"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
                app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/btnEdit" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>